[gd_scene load_steps=17 format=3 uid="uid://ccl1wkyt0ssg0"]

[ext_resource type="Theme" uid="uid://bxp0kjg5seq0h" path="res://src/Theme/UI_theme.tres" id="1_gbth1"]
[ext_resource type="PackedScene" uid="uid://byh7a30i6nfrf" path="res://src/Buttons/Scenes/quit_button.tscn" id="1_moktq"]
[ext_resource type="Script" path="res://Scripts/UI/ui.gd" id="2_0f3py"]
[ext_resource type="PackedScene" uid="uid://76ivuqfbnll5" path="res://src/UI/Scene/title.tscn" id="3_x1ce5"]
[ext_resource type="PackedScene" uid="uid://cu4t58thyh0b" path="res://src/Buttons/Scenes/change_scene_button.tscn" id="4_1rkon"]
[ext_resource type="PackedScene" uid="uid://d0tlidovkfk4j" path="res://src/Buttons/Scenes/back_button.tscn" id="6_3x5y0"]

[sub_resource type="FontFile" id="FontFile_yu8fe"]
subpixel_positioning = 0
msdf_pixel_range = 14
msdf_size = 128
cache/0/16/0/ascent = 0.0
cache/0/16/0/descent = 0.0
cache/0/16/0/underline_position = 0.0
cache/0/16/0/underline_thickness = 0.0
cache/0/16/0/scale = 1.0
cache/0/16/0/kerning_overrides/16/0 = Vector2(0, 0)

[sub_resource type="LabelSettings" id="LabelSettings_eqcm5"]
font = SubResource("FontFile_yu8fe")
font_color = Color(0, 0, 0, 1)

[sub_resource type="FontFile" id="FontFile_yvc86"]
subpixel_positioning = 0
msdf_pixel_range = 14
msdf_size = 128
cache/0/16/0/ascent = 0.0
cache/0/16/0/descent = 0.0
cache/0/16/0/underline_position = 0.0
cache/0/16/0/underline_thickness = 0.0
cache/0/16/0/scale = 1.0
cache/0/16/0/kerning_overrides/16/0 = Vector2(0, 0)

[sub_resource type="LabelSettings" id="LabelSettings_nonjb"]
font = SubResource("FontFile_yvc86")
font_color = Color(0, 0, 0, 1)

[sub_resource type="FontFile" id="FontFile_10tc6"]
subpixel_positioning = 0
msdf_pixel_range = 14
msdf_size = 128
cache/0/16/0/ascent = 0.0
cache/0/16/0/descent = 0.0
cache/0/16/0/underline_position = 0.0
cache/0/16/0/underline_thickness = 0.0
cache/0/16/0/scale = 1.0
cache/0/16/0/kerning_overrides/16/0 = Vector2(0, 0)

[sub_resource type="LabelSettings" id="LabelSettings_4dvls"]
font = SubResource("FontFile_10tc6")
font_color = Color(0, 0, 0, 1)

[sub_resource type="FontFile" id="FontFile_hfxxu"]
subpixel_positioning = 0
msdf_pixel_range = 14
msdf_size = 128
cache/0/16/0/ascent = 0.0
cache/0/16/0/descent = 0.0
cache/0/16/0/underline_position = 0.0
cache/0/16/0/underline_thickness = 0.0
cache/0/16/0/scale = 1.0
cache/0/16/0/kerning_overrides/16/0 = Vector2(0, 0)

[sub_resource type="LabelSettings" id="LabelSettings_gst3s"]
font = SubResource("FontFile_hfxxu")
font_color = Color(0, 0, 0, 1)

[sub_resource type="FontFile" id="FontFile_ppueo"]
subpixel_positioning = 0
msdf_pixel_range = 14
msdf_size = 128
cache/0/16/0/ascent = 0.0
cache/0/16/0/descent = 0.0
cache/0/16/0/underline_position = 0.0
cache/0/16/0/underline_thickness = 0.0
cache/0/16/0/scale = 1.0
cache/0/16/0/kerning_overrides/16/0 = Vector2(0, 0)

[sub_resource type="LabelSettings" id="LabelSettings_gwlwx"]
font = SubResource("FontFile_ppueo")
font_color = Color(0, 0, 0, 1)

[node name="UI" type="Control"]
process_mode = 3
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_gbth1")
script = ExtResource("2_0f3py")

[node name="W" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.05
anchor_top = 0.034
anchor_right = 0.05
anchor_bottom = 0.034
offset_left = -25.0
offset_top = -24.72
offset_right = 26.0
offset_bottom = 24.28
tooltip_text = "W"

[node name="Label" type="Label" parent="W"]
layout_mode = 0
offset_left = 21.0
offset_top = 15.0
offset_right = 40.0
offset_bottom = 38.0
text = "W"
label_settings = SubResource("LabelSettings_eqcm5")

[node name="S" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.05
anchor_top = 0.086
anchor_right = 0.05
anchor_bottom = 0.086
offset_left = -23.0
offset_top = -22.88
offset_right = 24.0
offset_bottom = 22.12

[node name="Label" type="Label" parent="S"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 19.0
offset_top = 9.0
offset_bottom = -1.0
grow_horizontal = 2
grow_vertical = 2
text = "S"
label_settings = SubResource("LabelSettings_nonjb")

[node name="A" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.02
anchor_top = 0.085
anchor_right = 0.02
anchor_bottom = 0.085
offset_left = -20.4
offset_top = -19.8
offset_right = 19.6
offset_bottom = 20.2

[node name="Label" type="Label" parent="A"]
layout_mode = 0
offset_left = 13.0
offset_top = 5.0
offset_right = 53.0
offset_bottom = 28.0
text = "A"
label_settings = SubResource("LabelSettings_4dvls")

[node name="D" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.079
anchor_top = 0.085
anchor_right = 0.079
anchor_bottom = 0.085
offset_left = -19.68
offset_top = -19.8
offset_right = 20.32
offset_bottom = 20.2

[node name="Label" type="Label" parent="D"]
layout_mode = 0
offset_left = 11.0
offset_top = 9.0
offset_right = 51.0
offset_bottom = 32.0
text = "D"
label_settings = SubResource("LabelSettings_gst3s")

[node name="Shift" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.139
anchor_top = 0.084
anchor_right = 0.139
anchor_bottom = 0.084
offset_left = -50.88
offset_top = -19.72
offset_right = 50.12
offset_bottom = 20.28

[node name="Label" type="Label" parent="Shift"]
layout_mode = 0
offset_left = 28.0
offset_top = 7.0
offset_right = 68.0
offset_bottom = 30.0
text = "Shift
"
label_settings = SubResource("LabelSettings_gwlwx")

[node name="PauseOverlay" type="ColorRect" parent="."]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.184314, 0.184314, 0.184314, 0.411765)

[node name="Title2" parent="PauseOverlay" instance=ExtResource("3_x1ce5")]
layout_mode = 1
offset_left = -45.0
offset_top = -266.0
offset_right = 45.0
offset_bottom = -161.0
theme_override_font_sizes/font_size = 100
text = "Pause"

[node name="PauseMenu" type="VBoxContainer" parent="PauseOverlay"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -168.0
offset_top = -48.0
offset_right = 168.0
offset_bottom = 48.0004
grow_horizontal = 2
grow_vertical = 2

[node name="ChangeSceneButton" parent="PauseOverlay/PauseMenu" instance=ExtResource("4_1rkon")]
layout_mode = 2
text = "Main Menu"
next_scene = "res://Scene/main_scene.tscn"

[node name="QuitButton" parent="PauseOverlay/PauseMenu" instance=ExtResource("1_moktq")]
layout_mode = 2
text = "Exit Game"

[node name="MenuOverlay" type="ColorRect" parent="."]
process_mode = 3
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.262745, 0.262745, 0.262745, 0.196078)

[node name="Title" parent="MenuOverlay" instance=ExtResource("3_x1ce5")]
layout_mode = 1
anchors_preset = 5
anchor_top = 0.0
anchor_bottom = 0.0
offset_left = -105.5
offset_top = 0.0
offset_right = 105.5
offset_bottom = 105.0
grow_vertical = 1
theme_override_font_sizes/font_size = 100
text = "Choose skin"

[node name="SkinMenu" type="HBoxContainer" parent="MenuOverlay"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.067
anchor_top = 0.119
anchor_right = 0.933
anchor_bottom = 0.889
offset_left = -0.639999
offset_top = -0.520004
offset_right = 0.639893
offset_bottom = -0.120056
grow_horizontal = 2
grow_vertical = 2

[node name="BackButton" parent="MenuOverlay" node_paths=PackedStringArray("overlay") instance=ExtResource("6_3x5y0")]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -280.0
offset_top = -128.0
offset_right = -24.0
offset_bottom = -20.0
grow_horizontal = 0
grow_vertical = 0
theme_override_font_sizes/font_size = 80
text = "Back"
overlay = NodePath("..")

[connection signal="hide_menu_overlay" from="MenuOverlay/BackButton" to="." method="_on_hide_menu_overlay"]
